--- a/Pipfile
+++ b/Pipfile
@@ -9,14 +9,12 @@ test = "python -m unittest discover -s tests -p 'test_*.py'"
 [dev-packages]
 
 [packages]
-netaddr = "==0.7.18"
-oauth2client = "==4.1.3"
-pymongo = "==3.5.1"
-requests = "==2.21.0"
-tornado = "~=6.0"
-click = "*"
-sentry-sdk = "==0.13.2"
-aiocontextvars = "*"
-hyper = "*"
-pyjwt = "*"
-cryptography = "*"
+netaddr = "~=1.3.0"
+google-auth = "~=2.35.0"
+requests = "~=2.32.3"
+pymongo = "~=4.10.1"
+tornado = "~=6.4.1"
+click = "~=8.1.7"
+sentry-sdk = "~=2.15.0"
+pyjwt = "~=2.9.0"
+httpx = {extras = ["http2"], version = "~=0.27.2"}
